//file:noinspection GroovyAssignabilityCheck
buildscript {
    repositories {
        maven { url 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'com.matthewprenger.cursegradle' version '1.4.0'
    id 'maven-publish'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'org.spongepowered.mixin'

archivesBaseName = mod_name
group = maven_group
version = 'mc' + mc_version + '-' + mod_version
def ENV = System.getenv()

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

mixin {
    add sourceSets.main, "mixins.refmap.json"
}

minecraft {
    mappings channel: channel, version: channel_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                carpet {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                carpet {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'carpet', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                carpet {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
}

jar {
    manifest {
        attributes([
            "Specification-Title": "carpet",
            "Specification-Vendor": "Cjsah, Gugle",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": project.mod_version,
            "Implementation-Vendor" :"Cjsah, Gugle",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            "MixinConfigs": "carpet.mixins.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

curseforge {
    def envApiKey = ENV.CURSEFORGE_TOKEN
    apiKey = envApiKey == null ? 'nope' : envApiKey
    project {
        id = project.curse_id
        releaseType = project.curse_type
        changelog = project.curse_changelog
        project.curse_versions.split(", ").each {
            String gameVersion -> addGameVersion gameVersion
        }
//        mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
//        mainArtifact.displayName = "$project.mod_name v$version for $project.mc_version"
        mainArtifact(jar) {
            displayName = "$project.name v$project.mod_version for mc$project.mc_version"
        }
    }
}
